--- a/Day001Title/index.html
+++ b/Day001Title/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>100 Days Css - Day 001</title>
+    <title>100 Days Css - Day 001 - Title</title>
   </head>
   <body>
     <div class="frame">
